# retail-execution

./: .gitignore  ACCOUNT_SUMMARY_IMPLEMENTATION.md  B2B_FUTURE_STATE_ARCHITECTURE.md  B2C_FUTURE_STATE_ARCHITECTURE.md  CROSS_SELL_IMPLEMENTATION.md  CUSTOMER_SEGMENTATION_IMPLEMENTATION.md  IDENTITY_RESOLUTION_IMPLEMENTATION.md  IDENTITY_RESOLUTION_README.md  README.md  identity_resolution_accounts.py  identity_resolution_contacts.py  pyproject.toml  run_agent_app.sh  test_clean.py  test_minimal.py  test_snowflake.py
scripts/setup/: __init__.py  run_agent_app.sh  setup.py
src/: app.py
src/pmi_retail/agents/account_summary/: __init__.py  data_aggregator.py  modern_text_formatter.py  notes_processor.py  summary_chain.py  summary_service.py
src/pmi_retail/agents/components/: chat_chain.py  pdf_processor.py  vectorstore.py
src/pmi_retail/config/: __init__.py
src/pmi_retail/cross_sell/: __init__.py  cross_sell_cli.py  cross_sell_dashboard.py  cross_sell_engine.py
src/pmi_retail/database/snowflake/: connection.py  table_builder.py
src/pmi_retail/scripts/: __init__.py  setup.py
src/pmi_retail/scripts/identity_resolution/: __init__.py  accounts_resolution.py  contacts_resolution.py  database_cleaner.py
src/pmi_retail/scripts/identity_resolution/utils/: __init__.py  fuzzy_matching.py
src/pmi_retail/segmentation/: __init__.py  segmentation_cli.py  segmentation_dashboard.py  segmentation_engine.py
src/pmi_retail/utils/: data_generator.py
src/pmi_retail_workshop/: __init__.py
tests/unit/test_account_summary/: test_service.py
